# -RAG-Based-Book-Intelligence-System

./: .env  .gitignore  README.md  cli.py  main.py  presentation.html  pyproject.toml  requirements.txt
app/: config.py
app/api/: routes.py
app/automation/: concept_extractor.py  watcher.py
app/ingestion/: chunker.py  parser.py  pipeline.py  vector_store.py
app/rag/: engine.py
data/: concepts.json
data/chroma/: chroma.sqlite3
tests/: conftest.py  test_api.py  test_chunker.py  test_concepts.py  test_parser.py  test_pipeline.py
uploads/: Pride & Prejudice.epub  book.txt  test_book.txt  test_book_2.txt
